sigar-sys/src/ffi.rs

#[test]
fn bindgen_test_layout_sigar_proc_state_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_state_t>(),
        160usize,
        concat!("Size of: ", stringify!(sigar_proc_state_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_state_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_proc_state_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_state_t>())).name as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_state_t),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_state_t>())).state as *const _ as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_state_t),
            "::",
            stringify!(state)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_state_t>())).ppid as *const _ as usize },
        132usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_state_t),
            "::",
            stringify!(ppid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_state_t>())).tty as *const _ as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_state_t),
            "::",
            stringify!(tty)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_state_t>())).priority as *const _ as usize },
        140usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_state_t),
            "::",
            stringify!(priority)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_state_t>())).nice as *const _ as usize },
        144usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_state_t),
            "::",
            stringify!(nice)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_state_t>())).processor as *const _ as usize },
        148usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_state_t),
            "::",
            stringify!(processor)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_state_t>())).threads as *const _ as usize },
        152usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_state_t),
            "::",
            stringify!(threads)
        )
    );
}
impl Default for sigar_proc_state_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn sigar_proc_state_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        procstate: *mut sigar_proc_state_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sigar_proc_args_t {
    pub number: ::std::os::raw::c_ulong,
    pub size: ::std::os::raw::c_ulong,
    pub data: *mut *mut ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_sigar_proc_args_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_args_t>(),
        24usize,
        concat!("Size of: ", stringify!(sigar_proc_args_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_args_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_proc_args_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_args_t>())).number as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_args_t),
            "::",
            stringify!(number)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_args_t>())).size as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_args_t),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_args_t>())).data as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_args_t),
            "::",
            stringify!(data)
        )
    );
}
impl Default for sigar_proc_args_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn sigar_proc_args_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        procargs: *mut sigar_proc_args_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sigar_proc_args_destroy(
        sigar: *mut sigar_t,
        procargs: *mut sigar_proc_args_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sigar_proc_env_t {
    pub data: *mut ::std::os::raw::c_void,
    pub type_: sigar_proc_env_t__bindgen_ty_1,
    pub key: *const ::std::os::raw::c_char,
    pub klen: ::std::os::raw::c_int,
    pub env_getter: ::std::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ::std::os::raw::c_void,
            arg2: *const ::std::os::raw::c_char,
            arg3: ::std::os::raw::c_int,
            arg4: *mut ::std::os::raw::c_char,
            arg5: ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >,
}
pub const sigar_proc_env_t_SIGAR_PROC_ENV_ALL: sigar_proc_env_t__bindgen_ty_1 = 0;
pub const sigar_proc_env_t_SIGAR_PROC_ENV_KEY: sigar_proc_env_t__bindgen_ty_1 = 1;
pub type sigar_proc_env_t__bindgen_ty_1 = u32;
#[test]
fn bindgen_test_layout_sigar_proc_env_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_env_t>(),
        40usize,
        concat!("Size of: ", stringify!(sigar_proc_env_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_env_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_proc_env_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_env_t>())).data as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_env_t),
            "::",
            stringify!(data)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_env_t>())).type_ as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_env_t),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_env_t>())).key as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_env_t),
            "::",
            stringify!(key)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_env_t>())).klen as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_env_t),
            "::",
            stringify!(klen)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_env_t>())).env_getter as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_env_t),
            "::",
            stringify!(env_getter)
        )
    );
}
impl Default for sigar_proc_env_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn sigar_proc_env_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        procenv: *mut sigar_proc_env_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_proc_fd_t {
    pub total: sigar_uint64_t,
}
#[test]
fn bindgen_test_layout_sigar_proc_fd_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_fd_t>(),
        8usize,
        concat!("Size of: ", stringify!(sigar_proc_fd_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_fd_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_proc_fd_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_fd_t>())).total as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_fd_t),
            "::",
            stringify!(total)
        )
    );
}
extern "C" {
    pub fn sigar_proc_fd_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        procfd: *mut sigar_proc_fd_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct sigar_proc_exe_t {
    pub name: [::std::os::raw::c_char; 1025usize],
    pub cwd: [::std::os::raw::c_char; 1025usize],
    pub root: [::std::os::raw::c_char; 1025usize],
}
#[test]
fn bindgen_test_layout_sigar_proc_exe_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_exe_t>(),
        3075usize,
        concat!("Size of: ", stringify!(sigar_proc_exe_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_exe_t>(),
        1usize,
        concat!("Alignment of ", stringify!(sigar_proc_exe_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_exe_t>())).name as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_exe_t),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_exe_t>())).cwd as *const _ as usize },
        1025usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_exe_t),
            "::",
            stringify!(cwd)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_exe_t>())).root as *const _ as usize },
        2050usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_exe_t),
            "::",
            stringify!(root)
        )
    );
}
impl Default for sigar_proc_exe_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn sigar_proc_exe_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        procexe: *mut sigar_proc_exe_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sigar_proc_modules_t {
    pub data: *mut ::std::os::raw::c_void,
    pub module_getter: ::std::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ::std::os::raw::c_void,
            arg2: *mut ::std::os::raw::c_char,
            arg3: ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >,
}
#[test]
fn bindgen_test_layout_sigar_proc_modules_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_modules_t>(),
        16usize,
        concat!("Size of: ", stringify!(sigar_proc_modules_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_modules_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_proc_modules_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_modules_t>())).data as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_modules_t),
            "::",
            stringify!(data)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_proc_modules_t>())).module_getter as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_modules_t),
            "::",
            stringify!(module_getter)
        )
    );
}
impl Default for sigar_proc_modules_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn sigar_proc_modules_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        procmods: *mut sigar_proc_modules_t,
    ) -> ::std::os::raw::c_int;
}
